# liv-plyr

./: .env  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  port.rs  proxy.rs  utils.rs
src/services/: proxy.ts
src/services/apis/: config.ts  proxy.ts
src/types/: content-types.ts
src/utils/: proxy.ts
