[package]
name = "live-ply"
version = "0.1.0"
description = "Play Live TV on desktops"
authors = ["Snyder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "live_ply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1"
http = "0.2"
base64 = "0.21"
port_check = "0.2.1"
tokio = "1.45.1"
warp = "0.3.7"
regex = "1.11.1"
